--- a/app/src/main/res/layout/cardlayout_group.xml
+++ b/app/src/main/res/layout/cardlayout_group.xml
@@ -20,8 +20,8 @@
 
         <ImageView
             android:id="@+id/itemImage"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -32,10 +32,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:textSize="30sp"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/itemDetail"
             app:layout_constraintLeft_toRightOf="@id/itemImage"
             app:layout_constraintStart_toEndOf="@id/itemImage"
-            app:layout_constraintTop_toTopOf="@id/itemImage"
+            app:layout_constraintTop_toTopOf="@+id/itemImage"
             tools:text="Group Name" />
 
         <TextView
@@ -44,9 +46,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/itemImage"
             app:layout_constraintLeft_toRightOf="@id/itemImage"
             app:layout_constraintStart_toEndOf="@id/itemImage"
-            app:layout_constraintTop_toBottomOf="@id/itemTitle"
+            app:layout_constraintTop_toBottomOf="@+id/itemTitle"
             tools:text="Group Description" />
 
 
