--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -15,6 +15,7 @@
         android:hint="@string/hint_group_name"
         android:imeOptions="actionDone"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,10 +25,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/label_search"
-        app:layout_constraintEnd_toEndOf="@+id/search_group_editText"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintEnd_toStartOf="@+id/tags_checkBox"
         app:layout_constraintStart_toStartOf="@+id/search_group_editText"
-        app:layout_constraintTop_toBottomOf="@id/search_group_editText" />
+        app:layout_constraintTop_toBottomOf="@+id/search_group_editText" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -41,5 +41,25 @@
         app:layout_constraintTop_toBottomOf="@+id/search_button"
         app:layout_constraintVertical_bias="0.15"
         tools:visibility="visible" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/groups_recycler_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginVertical="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/search_group_editText"
+        app:layout_constraintStart_toStartOf="@+id/search_button"
+        app:layout_constraintTop_toBottomOf="@+id/search_button" />
+
+    <CheckBox
+        android:id="@+id/tags_checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checked="true"
+        android:text="@string/action_search_tags"
+        app:layout_constraintBottom_toBottomOf="@+id/search_button"
+        app:layout_constraintEnd_toEndOf="@+id/search_group_editText"
+        app:layout_constraintTop_toTopOf="@+id/search_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
