--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -16,18 +16,9 @@
         android:imeOptions="actionDone"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/tags_checkBox"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/search_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/label_search"
-        app:layout_constraintEnd_toStartOf="@+id/tags_checkBox"
-        app:layout_constraintStart_toStartOf="@+id/search_group_editText"
-        app:layout_constraintTop_toBottomOf="@+id/search_group_editText" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -38,8 +29,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_button"
-        app:layout_constraintVertical_bias="0.15"
+        app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -48,18 +38,19 @@
         android:layout_height="0dp"
         android:layout_marginVertical="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/search_group_editText"
-        app:layout_constraintStart_toStartOf="@+id/search_button"
-        app:layout_constraintTop_toBottomOf="@+id/search_button" />
+        app:layout_constraintEnd_toEndOf="@+id/tags_checkBox"
+        app:layout_constraintStart_toStartOf="@+id/search_group_editText"
+        app:layout_constraintTop_toBottomOf="@+id/search_group_editText" />
 
     <CheckBox
         android:id="@+id/tags_checkBox"
+        android:layout_marginRight="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:checked="true"
         android:text="@string/action_search_tags"
-        app:layout_constraintBottom_toBottomOf="@+id/search_button"
-        app:layout_constraintEnd_toEndOf="@+id/search_group_editText"
-        app:layout_constraintTop_toTopOf="@+id/search_button" />
+        app:layout_constraintBottom_toBottomOf="@+id/search_group_editText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/search_group_editText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
