--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -44,7 +44,7 @@
 
     <CheckBox
         android:id="@+id/tags_checkBox"
-        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:checked="true"
