--- a/app/src/main/res/menu/menu_group_options.xml
+++ b/app/src/main/res/menu/menu_group_options.xml
@@ -4,10 +4,16 @@
 
     <item
         android:id="@+id/menu_item_refresh"
-        android:title="Refresh"
         android:icon="@drawable/icon_refresh"
+        android:title="Refresh"
         android:visible="true"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/schedules"
+        android:icon="@drawable/icon_clock"
+        android:title="@string/action_view_schedule"
+        android:visible="false"
+        />
     <item
         android:id="@+id/menu_item_sign_out"
         android:icon="@drawable/icon_sign_out"
