--- a/app/src/main/res/navigation/navigation_group.xml
+++ b/app/src/main/res/navigation/navigation_group.xml
@@ -5,7 +5,6 @@
     android:id="@+id/nav_graph"
     app:startDestination="@id/GroupHome">
 
-    <!-- TODO: Use argument as label -->
     <fragment
         android:id="@+id/GroupHome"
         android:name="com.andresd.socialverse.ui.group.GroupHomeFragment"
@@ -15,5 +14,26 @@
         <argument
             android:name="group_id"
             app:argType="string" />
+        <action
+            android:id="@+id/action_GroupHome_to_scheduleFragment"
+            app:destination="@id/schedules" />
+    </fragment>
+    <fragment
+        android:id="@+id/schedules"
+        android:name="com.andresd.socialverse.ui.group.MySchedulesListFragment"
+        android:label="@string/title_schedule"
+        tools:layout="@layout/fragment_my_schedules_list" >
+        <action
+            android:id="@+id/action_schedules_to_addScheduleFragment"
+            app:destination="@id/scheduleFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/scheduleFragment"
+        android:name="com.andresd.socialverse.ui.group.ScheduleFragment"
+        android:label="@string/title_schedule"
+        tools:layout="@layout/fragment_schedule" >
+        <argument
+            android:name="itemIndex"
+            app:argType="integer" />
     </fragment>
 </navigation>
